frontend/test/should_pass/retypeInSubpattern.grg
rule r
{
	n:Node;
	p:P(n);
	q:Q();
	
	modify {
		p();
		q();
	}
}

pattern P(n:Node)
{

	modify {
		m:Node<n>;
	}
}

pattern Q
{
	n:Node;
	
	modify {
		m:Node<n>;
	}
}
