frontend/test/should_fail/delretypesame_003b.grg
rule r{	n:Node;	p:P1(n);		modify {		m:Node<n>;		p();	}}pattern P1(n:Node){	p:P2(n);		modify {		p();	}}pattern P2(n:Node){	modify {		delete(n);	}}